<resources>
    <string name="app_name">MentorApp</string>
    <string name="splash_text">Subscriber App</string>
    <string name="title_activity_home_screen">"GitHub Subscribers"</string>
    <string name="communication_error_message">Communication error, try again.</string>
    <string name="http_error_message">Server Error, Please try again.</string>

    <!-- Subscriber detail -->
    <string name="tv_detail_user_name">User Name: %s</string>
    <string name="tv_detail_location">Location: %s</string>
    <string name="tv_detail_company">Company: %s</string>
    <string name="tv_detail_followers">Followers: %d</string>
    <string name="tv_detail_following">Following: %d</string>
    <string name="tv_detail_repositories">Repositories: %d</string>
    <string name="bundle_selected_user_id">userId</string>
</resources>
